1.15 Not Released

 - In POD, use =item for methods, as this is more common than =head2.

 - Correct the version numbering in Changes (this file) and add missing entry
   for version 1.11. Format CHANGES according to CPAN::Changes::Spec. Add test
   file t/release-cpan-changes.t.

1.14 2016-09-18

 - Avoid "use parent" in t/11-subclass.t since "parent" was not supported
   before 5.8.9.

1.13 2016-09-07

 - Use OO syntax to make subclassing possible.

 - Add test file t/11-subclass.t

 - Update require version of Test::More to 0.47.

 - Minor POD changes.

 - Clean up whitespace.

1.12 2008-07-04

 - Correct bearing tests in 09-bearing.t

1.11 2008-07-01

 - Removed ._* files added by Mac OS 10.5 tar by setting COPYFILE_DISABLE

1.10 2008-06-30

 - Added set_longitude_symmetric, set_bearing_symmetric, and
   set_distance_unit methods

 - Corrected example of at method in documentation

 - Ensured no test too close to range boundaries (0,360 or -180,180)

 - Removed non-POD method headers as redundant.

 - Added tests for different distance units and symmetrical output ranges.

1.0 2008-03-21

 - Normalized calculated angle result from _inverse to be less than 360.00
   using _normalize_input subroutine.

 - Fixed POD error (extraneous =over)

 - Add 'use 5.006_00;' statement to abort Perls earlier than 5.6.0 because of
   'our' statements.

 - Fix tests expecting 360 degrees for angles; change to 0.

0.904 2006-08-22

 - Eliminate tests using points too far away.

 - Use delta_ok with relative test instead of delta_within for large ranges.

0.903 2006-08-19

 - Change test for zero flattening to use delta_within instead of delta_ok

0.902 2005-11-04

 - Change WGS84 flattening value to 298.257223563.

 - Add set_defaults package method (and tests).

 - Add 'IAU76' to POD section on DEFINED ELLIPSOIDS

 - Croak on invalid ellipsoid or units.

 - Don't change defaults except by set_defaults.

 - Use package $DEBUG instead of instance $self->{debug} for debug.
