@@ -1,5 +1,7 @@
 1.15 Not Released
 
+ - Add test file t/release-pod-syntax.t
+
  - In POD, use =item for methods, as this is more common than =head2.
 
  - Correct the version numbering in Changes (this file) and add missing entry
